--- a/02-scales.Rmd
+++ b/02-scales.Rmd
@@ -70,6 +70,20 @@ kable(burnout[1:10,])
 
 Важное понятие здесь -- **область допустимых значений**. У непрерывной переменной это всегда интервал, например {0;+∞}, у дисретных -- строго определенные значения, которые, тем не менее, могут тоже стремиться к бесконечности, например, {0;1;2;3;4;5;6;7;8...}
 
+## Как опрделить, в какой шкале данные?
+
+Это довольно непростой вопрос, и первое время с ответом на него возникают большие трудности (*и это нормально*). Сложнее всего бывает отличить порядковую шкалу от интервальной, и с точки зрения теории измерений это установление -- совсем непростая задача. С классической интервальной шкалой вроде температуры в градусах Цельсия или шкалы летоисчисления мы в наших исследованиях сталкиваемся редко, а вот данные сумм балл опросников, чаще всего, тоже относятся к интервальной, хоть и обладают скорее свойствами порядковой (сложно сказать, что между 20 и 30 баллами по шкале тревожнсти Бэка ровно такой же интервал тревожности, как и между 60 и 70 баллами). Мы скорее отнесем ее к порядковой за счето того, что делений на этой шкале очень много (больше, чем когда мы оцениваем что-то по шкале от 1 до 5), и не хочется ограничивать себя статистическими методами, пригодными для работы только с порядковой шкалой и не выше. В остальных случае определение шкалы чуть полегче. Я предлагаю первое время использовать такой упрощенный алгоритм определения шкалы:
+
+1. Есть ли среди значений переменной буквенные? Если да, это либо номинативная шкала, либо порядковая.
+
+2. Можем ли мы расположить эти буквенные значения в определенном порядке по шкале х? Изменится ли что-то, если мы поменяем соседние значения местами? Если да -- это порядковая шкала, если нет -- номинативная (например, названия ВУЗов я могу расположить в любом порядке, а места, которые заняли в соревнованиях, только в порядке 1-2-3, перемена 1-3-2 рушит смысл)
+
+3. Если на (1) вопрос ответили нет, и буквенных значений нет -- это либо порядковая шкала, либо интервальная шкала, либо шкала отношений.  
+
+4. Равны ли интервалы на шкале в разных местах? В интервал, например, 20 до 30 будет входить ровно такое же число значений, как и в интервал от 50 до 60? Если нет, это порядковая шкала, если да -- либо интервальная, либо шкала отношений.
+
+5. Есть ли абсолютный ноль на шкале? Не абсурдно ли звучат выражения "значение 1" *во столько-то раз больше или меньше* чем "значение 2"? Если да, то это шкала отношений, если нет -- интервальная. Готово! 
+
 <!--chapter:end-->
 
 
