--- a/02-scales.Rmd
+++ b/02-scales.Rmd
@@ -78,11 +78,13 @@ kable(burnout[1:10,])
 
 2. Можем ли мы расположить эти буквенные значения в определенном порядке по шкале х? Изменится ли что-то, если мы поменяем соседние значения местами? Если да -- это порядковая шкала, если нет -- номинативная (например, названия ВУЗов я могу расположить в любом порядке, а места, которые заняли в соревнованиях, только в порядке 1-2-3, перемена 1-3-2 рушит смысл)
 
-3. Если на (1) вопрос ответили нет, и буквенных значений нет -- это либо порядковая шкала, либо интервальная шкала, либо шкала отношений.  
+3. Если на (1) вопрос ответили нет, и буквенных значений нет -- можно ли заменить цифры буквами, и от этого ничего не поменяется? Если да, то это также номинативная шкала (например, ID испытуемого)
 
-4. Равны ли интервалы на шкале в разных местах? В интервал, например, 20 до 30 будет входить ровно такое же число значений, как и в интервал от 50 до 60? Если нет, это порядковая шкала, если да -- либо интервальная, либо шкала отношений.
+4. Если букв нет и цифры в данных нельзя заменить буквами, это может быть либо порядковая шкала, либо интервальная шкала, либо шкала отношений
 
-5. Есть ли абсолютный ноль на шкале? Не абсурдно ли звучат выражения "значение 1" *во столько-то раз больше или меньше* чем "значение 2"? Если да, то это шкала отношений, если нет -- интервальная. Готово! 
+5. Равны ли интервалы на шкале в разных местах? В интервал, например, 20 до 30 будет входить ровно такое же число значений, как и в интервал от 50 до 60? Если нет, это порядковая шкала, если да -- либо интервальная, либо шкала отношений.
+
+6. Есть ли абсолютный ноль на шкале? Не абсурдно ли звучат выражения "значение 1" *во столько-то раз больше или меньше* чем "значение 2"? Если да, то это шкала отношений, если нет -- интервальная. Готово! 
 
 <!--chapter:end-->
 
