--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -1,35 +1,4 @@
-# Нормальное распределение и оценки {#normdist} 
-
-## Центральная предельная теорема {#ctt}
-
-**Центральная предельная теорема** -- важное понятие в статистике, применимое к исследованиям в социальных науках. Мы уже выучили, что переменные, с которыми мы работаем -- это случайные величины [#random-variable]. Именно этот факт позволяет нам вычислять могие параметры по тем формулам, которые мы используем: если бы мы работали не с случайными величинами, у нас была бы совсем другая статистика (кажется, куда более сложная)!
-
-В общем виде, ее можно сформулировать так: 
-
-> Значения признака, являющегося случайной величиной (чье значение нельзя предсказать точно) и подтверженного влиянию нескольких независимых факторов, распределены нормально.
-
-Из нее есть важное следствие:
-> Если мы проводим много одинаковых исследований, то выборочные средние этих исследований будут распределены нормально.
-
-```{r, eval=TRUE, echo = FALSE, message = FALSE, }
-means_from_samples <- replicate(1000, mean(rnorm(100, mean = 100, sd = 15)))
-hist(means_from_samples, breaks = 30)
-```
-
-```{r}
-mean(means_from_samples)
-sd(means_from_samples)
-```
-
-Стандартное отклонение распределение выборочных срених называется **стандартной ошибкой среднего (standard error of the mean (s.e.m. или se)** и вычисляется по формуле $\sigma_{\overline{x}}= \frac{\sigma} {\sqrt{n}}$ или, используя выборочное стандартное отклонение по одной выборке $s_{\overline{x}}= \frac{s} {\sqrt{n}}$
-
-Визуализация принципов работы 
-https://gallery.shinyapps.io/CLT_mean/
-
-## Стандартная ошибка среднего {#standart_error}
-
-$se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
-
+# Нормальное распределение: сравнение данных и интервальные оценки {#normdist} 
 
 ## Нормальное распределение и его свойства
 
@@ -73,6 +42,36 @@ knitr::include_graphics("docs/images/standatr_normrasp.png")
 ## Z-преобразование и стандартизация
 
 $z = \frac{x - \bar x}{s}$
+
+## Центральная предельная теорема {#clt}
+
+**Центральная предельная теорема** -- важное понятие в статистике, применимое к исследованиям в социальных науках. Мы уже выучили, что переменные, с которыми мы работаем -- это случайные величины [#random-variable]. Именно этот факт позволяет нам вычислять могие параметры по тем формулам, которые мы используем: если бы мы работали не с случайными величинами, у нас была бы совсем другая статистика (кажется, куда более сложная)!
+
+В общем виде, ее можно сформулировать так: 
+
+> Значения признака, являющегося случайной величиной (чье значение нельзя предсказать точно) и подтверженного влиянию нескольких независимых факторов, распределены нормально.
+
+Из нее есть важное следствие:
+> Если мы проводим много одинаковых исследований, то выборочные средние этих исследований будут распределены нормально.
+
+```{r, eval=TRUE, echo = FALSE, message = FALSE, }
+means_from_samples <- replicate(1000, mean(rnorm(100, mean = 100, sd = 15)))
+hist(means_from_samples, breaks = 30)
+```
+
+```{r}
+mean(means_from_samples)
+sd(means_from_samples)
+```
+
+Стандартное отклонение распределение выборочных срених называется **стандартной ошибкой среднего (standard error of the mean (s.e.m. или se)** и вычисляется по формуле $\sigma_{\overline{x}}= \frac{\sigma} {\sqrt{n}}$ или, используя выборочное стандартное отклонение по одной выборке $s_{\overline{x}}= \frac{s} {\sqrt{n}}$
+
+Визуализация принципов работы 
+https://gallery.shinyapps.io/CLT_mean/
+
+## Стандартная ошибка среднего {#standart_error}
+
+$se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
 
 ## Доверительный интервал
 
