--- a/02-scales.Rmd
+++ b/02-scales.Rmd
@@ -70,7 +70,7 @@ kable(burnout[1:10,])
 
 Важное понятие здесь -- **область допустимых значений**. У непрерывной переменной это всегда интервал, например {0;+∞}, у дисретных -- строго определенные значения, которые, тем не менее, могут тоже стремиться к бесконечности, например, {0;1;2;3;4;5;6;7;8...}
 
-## Как опрделить, в какой шкале данные?
+## Как определить, в какой шкале данные?
 
 Это довольно непростой вопрос, и первое время с ответом на него возникают большие трудности (*и это нормально*). Сложнее всего бывает отличить порядковую шкалу от интервальной, и с точки зрения теории измерений это установление -- совсем непростая задача. С классической интервальной шкалой вроде температуры в градусах Цельсия или шкалы летоисчисления мы в наших исследованиях сталкиваемся редко, а вот данные сумм балл опросников, чаще всего, тоже относятся к интервальной, хоть и обладают скорее свойствами порядковой (сложно сказать, что между 20 и 30 баллами по шкале тревожнсти Бэка ровно такой же интервал тревожности, как и между 60 и 70 баллами). Мы скорее отнесем ее к порядковой за счето того, что делений на этой шкале очень много (больше, чем когда мы оцениваем что-то по шкале от 1 до 5), и не хочется ограничивать себя статистическими методами, пригодными для работы только с порядковой шкалой и не выше. В остальных случае определение шкалы чуть полегче. Я предлагаю первое время использовать такой упрощенный алгоритм определения шкалы:
 
