--- a/05-decriptives.Rmd
+++ b/05-decriptives.Rmd
@@ -312,11 +312,11 @@ knitr::include_graphics("docs/images/quartiles-2.png")
 
 ## Меры вариативности (изменчивости) {#varm} 
 
-Вариативность -- изменичвость значений, как сильно разнятся данные от наблюдения к наблюдению.
-
-Помимо мер центральной тенденции -- меры вариативности, они же меры изменчивости или разброса. 
+Помимо мер центральной тенденции -- меры вариативности, они же меры изменчивости или разброса. Вариативность -- изменчивость значений, как сильно разнятся данные от наблюдения к наблюдению в рамках выборки.
 
 > Допустим, вы рбнаружили, что ваш показатель эритроцитов в крови равен 3,8 * 10 при норме 4*10. Насколько сильное это отклонение?
+
+Зачем они нужны? Разве недостаточно только мер центральной тенденции для описания распределения? Нет, недостаточно. В то время как меры ЦТ показывают, куда тяготяют наши данные, где их "центр масс", то есть каким одним числом можно охарактеризовать наши данные в общем -- меры изменчивость показывают, а насколько большой разброс в наших данных, насколько каждое из наших наблюдений лежит близко к среднему?
 
 Меры центральной тенденции могут совпадать, хотя меры изменчивость значительно отличаться, например
 
@@ -357,11 +357,16 @@ range(sample_data1)
 
 Мы уже слышали о стандартном отклонении (как минимум, оно фигурирует в формуле нормального распределения). Теперь познакомимся с ним ближе и попробуем его вывести.
 
-**Стандартное отклонение, оно же среднеквадратичное отклонение (standard deviation)** -- это среднее отклонение наблюдений от их среднего означения.
 
-Попробуем его посчитать:
+Так как если мы будем считать отклонение каждого наблюдения от среднего и попытаемся их усреднить, то получим ноль -- значит, нам нужен другой подход к оценке отклонения. Если мы хотим избавиться от проблемы получения нуля, то у нас есть обычно два варианта: взять значения по модулю или возвести их в квадрат. Для получения оценки отклонения воспользовались вторым вариантом и ввели еще одну важную меру вариативности для -- **дисперсию**. 
 
-**Дисперсия**
+**Дисперсия (variance)** -- мера вариативности, которая являются квадрату стандартного отклонения и считается по формуле $D = \dfrac{\sum_{i=1}^{n}(x_i - \bar x)^2}{n}$
+
+Чем больше ваиативность в данных, тем больше (пропорционально квадрату отклонений) дисперсия.
+
+Важный момент -- это формула дисперсии для генеральной совокупности. Для выборочной дисперсии количество степеней свободы умньшается на единицу, поэтому формула примет такой вид $D = \dfrac{\sum_{i=1}^{n}(x_i - \bar x)^2}{n-1}$
+
+**Стандартное отклонение, оно же среднеквадратичное отклонение (standard deviation)** -- это среднее отклонение наблюдений от их среднего означения. Оно рассчитывается как квадратный корень из дисперсии: $sd = \sqrt{\dfrac{\sum_{i=1}^{n}(x_i - \bar x)^2}{n-1}}$
 
 
 **Свойства дисперсии и стандартного отклонения**
