--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -4,7 +4,14 @@
 
 Мы уже обсуждали нормальное распределение, когда говорили про распределения в целом [# Распределения]. Это вероятностный закон, где заданным значениям признака приводится в соответствие вероятность встретить признак с таким значением, выраженный по формуле $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
 
-Часто можно увидеть такую запись, обозначающую нормальное распределение: $\sim \mathcal{N}(\mu, \, \sigma^2)$
+Если внимательно посмотреть на формулу нормального распределения, можно обратить внимание, что почти все в ней является константами, кроме переменной x  и двух неизвестных параметров: $\mu$ и $\sigma$. Это уже знакомые наши друзья: среднее генеральной совокупности и стандартное отклонение. Таким образом, чтобы построить распределение для любого признака, который в генеральной совокупности распределен нормально, нам необходимо знать **только два параметра распределения**:
+
+* среднее 
+* стандартное отклонение
+
+Помимо, собственно, формулы, часто можно увидеть такую запись, обозначающую нормальное распределение: $\sim \mathcal{N}(\mu, \, \sigma^2)$
+
+На рисунке видно, что среднее отвечает за положение цента распределения, а стандартно отклонение -- за его "растянутость" вдоль оси х, ширину колокола.
 
 <p align="center"> 
 ```{r fig.align = 'center', eval=TRUE, echo = FALSE, message = FALSE, out.width="60%"}
@@ -13,7 +20,10 @@ knitr::include_graphics("docs/images/different_norm_vis-1.png")
 </p>
 
 
-Нормальное распределение интересно нам как минимум потому, что многие признаки, которые мы исследуем, согласно центральной предельной теореме распределены номрально. Помимо этого **нормальное распределение обладает рядом свойств**:
+Нормальное распределение интересно нам как минимум потому, что признаки, которые мы исследуем, являются случайными величинами, и с высокой вероятностью распределены номрально. 
+
+
+**Нормальное распределение обладает рядом свойств**:
 
 * симметрично
 * унимодально (только одна мода)
@@ -25,13 +35,13 @@ knitr::include_graphics("docs/images/Standard_deviation_diagram.png")
 ```
 </p>
 
-
 * в пределах одного стандартного отклонения от среднего значения лежит 68% значений — это очень частотные значения;
 * в пределах двух стандартных отклонений от среднего значения лежит 95% значений — бо́льшая часть выборки;
 * в пределах трех стандартных отклонений от среднего значения лежит практически 100% выборки — то есть вся выборка.
 
 ## Стандартное нормальное распределение
 
+Стандартное нормальное распределение -- это нормальное распределение с центром в нуле и стандартным отклонением равным 1.
 
 <p align="center"> 
 ```{r fig.align = 'center', out.width="60%"}
@@ -39,9 +49,25 @@ knitr::include_graphics("docs/images/standatr_normrasp.png")
 ```
 </p>
 
+
+
 ## Z-преобразование и стандартизация
 
+Стандартизация -- это процесс преобразования наших данных к стандартной безразмерной Z-шкале со средним 0  и стандартным отклонением 1.
+
 $z = \frac{x - \bar x}{s}$
+
+Стандартизация состоит из двух операций:
+
+* центрирование — то, что происходит в числителе,
+* нормирование — то, что происходит в знаменателе.
+
+Можно интерпретировать Z-шкалу как шкалу типичности или частотности встечаемости значний: все, что лежит в +- 1 -- встечается очень часто, и чем дальше от цента -- тем более редкие значения нам попадаются.
+
+Правило трех сигм:
+
+
+
 
 ## Центральная предельная теорема {#clt}
 
