--- a/05-decriptives.Rmd
+++ b/05-decriptives.Rmd
@@ -50,6 +50,9 @@ burnout %>%
 
 **Коэффициент ассиметрии, "скошенность" (skewness)** -- показатель симметричности графика: если график симметричен6 этот показатель равен 0, если нет, имеет значение отличное от нуля в ту сторону, в котороую график скошен.
 
+* Если коэффициент ассиметрии положительный, $S > 0$ -- говорят о **правосторонней ассиметии** (правая часть вытянута больше, чем левая).
+* Если коэффициент ассиметрии отрицательный, $S < 0$ -- говорят о **левосторонней ассиметии** (левая часть вытянута больше, чем правая).
+
 **Эксцесс, "вытянутость" (kurtosis)** -- показатель, насколько график вытянут вверх или "приплюснут" вдоль оси абсцисс.
 
 <p align="center"> 
@@ -58,6 +61,7 @@ knitr::include_graphics("docs/images/Illustration.jpeg")
 ```
 </p>
 
+Если
 ## Меры центральной тенденции {#ctm} 
 
 Меры центральной тенденции -- это такие описательные статистики, которые позволяют что-то сказать про "центр масс" распределения: где у него центр, где больше всего данных в этом распределении? Это бывает очень полезно на прикладных вопросах. 
@@ -338,6 +342,8 @@ rnorm_three %>%
   scale_x_continuous(breaks = -5:15) +
   theme_minimal()
 ```
+<p align="center"> <font color="gray"> [Изображения из учебника Антона Ангельгардта](https://angelgardt.github.io/SFDA2022/book/variation.html) </font> </p>
+
 Эти распределения очень разные, но ~~все-таки они вместе~~ если посмотреть на их средние -- они будут одинаковыми
 
 <p align="center"> 
