--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -20,7 +20,12 @@ knitr::include_graphics("docs/images/different_norm_vis-1.png")
 </p>
 
 
-Нормальное распределение интересно нам как минимум потому, что признаки, которые мы исследуем, являются случайными величинами, и с высокой вероятностью распределены номрально. 
+Почему такое внимание мы уделяем именно нормальному распределению?
+
+* Нормальное распределение интересно нам как минимум потому, что большинство признакв, которые мы исследуем, являются случайными величинами, и распределены номрально. 
+* Физические, биологические и психологические признаки (рост, вес, выраженность черт личности) обычно распределены нормально: средние признаки встречаются в природе чаще, чем более радикальные
+* Нормальное распределение симметично и унимодально, и в некоторых операциях с ним попроще работать
+* Для того, чтобы оценить вероятность встетить человека определенного роста, нам нужно знать (или оценить) только среднее и стандартное отклонение генеральной совокупности -- и далее мы вычислим эту вероятность по формуле нормального распределения
 
 
 **Нормальное распределение обладает рядом свойств**:
@@ -34,10 +39,11 @@ knitr::include_graphics("docs/images/different_norm_vis-1.png")
 knitr::include_graphics("docs/images/Standard_deviation_diagram.png")
 ```
 </p>
+"Правило тех сигм":
 
-* в пределах одного стандартного отклонения от среднего значения лежит 68% значений — это очень частотные значения;
-* в пределах двух стандартных отклонений от среднего значения лежит 95% значений — бо́льшая часть выборки;
-* в пределах трех стандартных отклонений от среднего значения лежит практически 100% выборки — то есть вся выборка.
+* в пределах одного стандартного отклонения от среднего значения ($\bar x ± \sigma$) лежит 68% значений — это очень частые значения;
+* в пределах двух стандартных отклонений от среднего значения ($\bar x ± 2\sigma$) лежит 95% значений — бо́льшая часть выборки;
+* в пределах трех стандартных отклонений от среднего значения ($\bar x ± 3\sigma$) лежит практически 100% выборки — то есть вся выборка.
 
 ## Стандартное нормальное распределение
 
@@ -62,9 +68,15 @@ $z = \frac{x - \bar x}{s}$
 * центрирование — то, что происходит в числителе,
 * нормирование — то, что происходит в знаменателе.
 
-Можно интерпретировать Z-шкалу как шкалу типичности или частотности встечаемости значний: все, что лежит в +- 1 -- встечается очень часто, и чем дальше от цента -- тем более редкие значения нам попадаются.
+<p align="center"> 
+```{r fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/centring_norming-1.png")
+```
+</p>
 
-Правило трех сигм:
+
+
+Можно интерпретировать Z-шкалу как шкалу типичности или частотности встечаемости значний: все, что лежит в +- 1 -- встечается очень часто, и чем дальше от цента -- тем более редкие значения нам попадаются.
 
 
 
