--- a/05-decriptives.Rmd
+++ b/05-decriptives.Rmd
@@ -1,5 +1,10 @@
 # Описательная статистика {#descriptives} 
 
+```{r, eval=TRUE, echo = FALSE, message = FALSE}
+library(tidyverse)
+library(kableExtra)
+```
+
 Мы переходим к обсуждению первого вида статистики из двух -- **описательной статистики** **(descriptive statistics)**. Когда мы гооворим об описательной статистике, мы всегда говорим об эмпричиески полученных данных, а не о генеральной совокупности. Чтобы что-то сказать о генеральной совокупности, нам нужно заниматься статистикой вывода, а пока остновимся на эмпирически полученных данных и выборочных распределениях.
 
 Зачем нужна описательная статистика? Мы обсуждали, что описательная статистика:
@@ -16,8 +21,6 @@
 Например, мы строили их для данных про эмоциональное выгорание:
 
 ```{r, eval=TRUE, echo = FALSE, message = FALSE}
-library(tidyverse)
-library(kableExtra)
 teacher_number <- seq(1,30,1)
 age <-  sample(22:60, size = 30, replace = T)
 exp_years <- sample(1:8, size = 30, replace = T)
@@ -344,13 +347,30 @@ rnorm_three %>%
 ```
 <p align="center"> <font color="gray"> [Изображения из учебника Антона Ангельгардта](https://angelgardt.github.io/SFDA2022/book/variation.html) </font> </p>
 
+
 Эти распределения очень разные, но ~~все-таки они вместе~~ если посмотреть на их средние -- они будут одинаковыми
 
-<p align="center"> 
-```{r fig.align = 'center', out.width="100%"}
-knitr::include_graphics("docs/images/distributions_with_the_same_means_mean-1.png")
+
+```{r distributions_with_the_same_means_generation-2, echo=F}
+set.seed(123)
+tibble(id = 1:100,
+       x1 = rnorm(100, mean = 2, sd = 1),
+       x2 = rnorm(100, mean = 2, sd = 3),
+       x3 = rnorm(100, mean = 2, sd = 0.5)) -> rnorm_three
+la <- c(x1 = "Variable 1", x2 = "Variable 2", x3 = "Variable 3")
+rnorm_three %>% 
+  pivot_longer(cols = c("x1", "x2", "x3")) %>% 
+  ggplot(aes(value)) +
+  geom_histogram(binwidth = .5) +
+  stat_summary(aes(xintercept = ..x.., y = 0), fun = mean, geom = "vline", orientation = "y") +
+  facet_wrap(~ name,
+             labeller = labeller(name = la)) +
+  labs(x = "Value",
+       y = "Count") +
+  scale_x_continuous(breaks = -5:15) +
+  theme_minimal()
 ```
-</p>
+
 ### Размах, стандартное отклонение и дисперсия
 
 **Размах (range)** -- разница между максимальным и минимальным значением в выборке, $x_{max}-x_{min}$
