--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -95,12 +95,17 @@ Z-оценку можно расположить на Z-распределени
 Стандартизация не меняет характер распределения, менят только положения его центра и "расплющенность" вдоль оси ч-- то есть буквально то, что мы знаем по свойствам среднего и дисперсии
 
 <p align="center"> 
-```{r fig.align = 'center', out.width="100%"}
+```{r fig.align = 'center', echo = FALSE, message = FALSE, out.width="100%"}
 knitr::include_graphics("docs/images/centring_norming-1.png")
 ```
 </p>
 
 Можно интерпретировать Z-шкалу как шкалу типичности или частотности встечаемости значний: все, что лежит в +- 1 -- встечается очень часто, и чем дальше от цента -- тем более редкие значения нам попадаются.
+
+Таким образм, Z-преобразование используется чтобы:
+
+* Узнать, насколько типично (частотно) встреченное нами значение 
+* Сравнить вероятности встретить значения из двух разных выборок (нормально распределенных)
 
 Например, мы (откуда-то) знаем, что средний рост женщин 165 см со стандартным отклонением 7, а средний рост мужчин -- 178 и станд откл 8. 
 
@@ -117,7 +122,7 @@ $Z_{м_174} = -0.5$, что соответствует примерно 30% ве
 
 Таким образом, вероятность встретить женщину с ростом 158 см составляет 16%, и это на 14% меньше, чем вероятность встретить мужчину ростом 174 см.
 
-# Интвервальные оценки среднего {intervals} 
+# Интвервальные оценки среднего {#intervals} 
 
 ## Центральная предельная теорема {#clt}
 
