--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -154,7 +154,7 @@ https://gallery.shinyapps.io/CLT_mean/
 
 $se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
 
-## Доверительный интервал
+## Доверительный интервал {#ci}
 
 Мы рассмотрели описательные статистики: меры центральной тенденции и меры вариативности переменной. Этоо были тоочечные оценки: мы используем эти величины, чтобы описать наши данные, перейти от таблички с одному или нескольким числам. Помимо точечных оценок используются также интервальные -- если мы хотим получить не конкретное число, а интервал, в котором зато точно будет содержаться интересующий нас параметр.
 
@@ -169,3 +169,6 @@ https://rpsychologist.com/d3/ci/
 * $68\%:  \pm  1 \times \mathrm{se} \\$
 * $95\%:  \pm  2 \times \mathrm{se} \\$
 * $99\%:  \pm  3 \times \mathrm{se} \\$
+
+> Исследование семейных пар в России (объем выборки составил 100 семейных пар), в которых есть дети подросткового возраста, показало, что те пары, где отец и мать работают полный рабочий день, они проводят со своими детьми в среднем 15 часов свободного времени в неделю. Согласно данным проведенного исследования, стандартное отклонение оказалось равным 4,5 (ч). Можно ли на уровне доверия 0,99 утверждать, что в семьях, в которых работают и отец, и мать, в среднем в течение недели родители проводят с детьми подросткового возраста больше 14 часов?
+
