--- a/06-normdist.Rmd
+++ b/06-normdist.Rmd
@@ -124,6 +124,15 @@ $Z_{м_174} = -0.5$, что соответствует примерно 30% ве
 
 # Интвервальные оценки среднего {#intervals} 
 
+До этого мы пыталась оценить генеральную совокупность, подставив вместо неизвестных значений среднего и стандартного отклонения генеральной совокупности -- выборочные. Это *точечные оценки*.
+
+|                                   | Генеральная совокупность | Выборка |
+|:---------------------------------:|:------------------------:|:-------:|
+| Среднее (математическое ожидание) |         $\mu$            |M, $\overline X$|
+|       Стандартное отклонение      |          $\sigma$        |   s, sd |
+
+Однако, это не единственный способ узнать что-то о генеральной совокупности. Вместо того, чтобы оценить *точно*, мы можем использовать еще и интервалы -- то есть сказать, что *среднее генеральной совокупности с заданной вероятностью лежит в таком-то интервале*. Это -- интервальный подход к оценке генеральной совокупности, и он будет нам сильно полезен, когда мы перейдем к статистике вывода.
+
 ## Центральная предельная теорема {#clt}
 
 **Центральная предельная теорема** -- важное понятие в статистике, применимое к исследованиям в социальных науках. Мы уже выучили, что переменные, с которыми мы работаем -- это случайные величины [#random-variable]. Именно этот факт позволяет нам вычислять могие параметры по тем формулам, которые мы используем: если бы мы работали не с случайными величинами, у нас была бы совсем другая статистика (кажется, куда более сложная)!
@@ -169,6 +178,8 @@ https://rpsychologist.com/d3/ci/
 * $68\%:  \pm  1 \times \mathrm{se} \\$
 * $95\%:  \pm  2 \times \mathrm{se} \\$
 * $99\%:  \pm  3 \times \mathrm{se} \\$
+
+Задача на доверительный интервал:
 
 > Исследование семейных пар в России (объем выборки составил 100 семейных пар), в которых есть дети подросткового возраста, показало, что те пары, где отец и мать работают полный рабочий день, они проводят со своими детьми в среднем 15 часов свободного времени в неделю. Согласно данным проведенного исследования, стандартное отклонение оказалось равным 4,5 (ч). Можно ли на уровне доверия 0,99 утверждать, что в семьях, в которых работают и отец, и мать, в среднем в течение недели родители проводят с детьми подросткового возраста больше 14 часов?
 
